--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "next": "^9.5.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
-  } 
+  }
 }
