--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
