--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/atpluem/Palmsky",
+  "author": "krittanan chalong <krittananchalong@gmail.com>",
+  "license": "MIT"
 }
