--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
     "next": "^9.5.3",
     "react": "^16.13.1",
