--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^9.5.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
