--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
     "next": "^9.5.5",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-elastic-carousel": "^0.9.5",
