--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-elastic-carousel": "^0.9.5",
+    "react-horizontal-scrolling-menu": "^0.7.8",
+    "react-scroll-horizontal": "^1.6.6",
     "sass": "^1.29.0",
     "styled-components": "^5.2.1",
     "use-http": "^1.0.15"
